refactor: Improves project layout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2021"
 [dependencies]
 log = "0.4.21"
 petgraph = "0.6.5"
+serde = { version = "1.0.202", features = ["derive", "rc"] }
+
+[features]
+serde = []
+default = ["serde"]
