refactor: Utilizes rodeo for string interning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 [dev-dependencies]
 
 [dependencies]
+lasso = { version = "0.7.2", features = ["serde", "serialize"] }
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
 
 [features]
