--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 readme = "README.md"
 
 [dev-dependencies]
+serde_json = "1.0.117"
 
 [dependencies]
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
