--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 serde_json = "1.0.117"
 
 [dependencies]
+rustc-hash = "1.1.0"
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
 
 [features]
