--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,20 @@ license = "MIT"
 readme = "README.md"
 
 [dev-dependencies]
+criterion = "0.5"
+ureq = "2.9.7"
+flate2 = "1.0"
 
 [dependencies]
+fxhash = "0.2.1"
+lasso = { version = "0.7.2", features = ["serde", "serialize", "multi-threaded"] }
+rayon = "1.10.0"
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
 
 [features]
 serde = ["dep:serde"]
 default = ["serde"]
+
+[[bench]]
+name = "directed_graph"
+harness = false
