--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orbweaver"
-version = "0.5.3"
+version = "0.5.4"
 edition = "2021"
 authors = ["ixpantia <hola@ixpantia.com>", "Andrés F. Quintero <andres@ixpantia.com>"]
 description = "Crate designed for effortless construction and analysis of graph data structures."
@@ -15,7 +15,7 @@ flate2 = "1.0"
 
 [dependencies]
 fxhash = "0.2.1"
-lasso = { version = "0.7.2", features = ["serde", "serialize", "multi-threaded"] }
+string-interner = { version = "0.17", features = ["serde"] }
 rayon = "1.10.0"
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
 
