--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orbweaver"
-version = "0.8.0"
+version = "0.8.1"
 edition = "2021"
 authors = ["ixpantia <hola@ixpantia.com>", "Andrés F. Quintero <andres@ixpantia.com>"]
 description = "Crate designed for effortless construction and analysis of graph data structures."
@@ -19,11 +19,10 @@ rayon = "1.10.0"
 serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
 serde_cbor = { version = "0.11.2", optional = true }
 flate2 = { version = "1.0", optional = true }
-base64 = { version = "0.22.1", optional = true }
 
 [features]
 serde = ["dep:serde"]
-binary = ["serde", "dep:serde_cbor", "dep:flate2", "dep:base64"]
+binary = ["serde", "dep:serde_cbor", "dep:flate2"]
 default = ["serde", "binary"]
 
 [[bench]]
