--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "orbweaver"
-version = "0.10.1"
+version = "0.10.4"
 edition = "2021"
 authors = ["ixpantia <hola@ixpantia.com>", "Andrés F. Quintero <andres@ixpantia.com>"]
 description = "Crate designed for effortless construction and analysis of graph data structures."
 repository = "https://github.com/ixpantia/orbweaver-rs"
 license = "MIT"
 readme = "README.md"
+exclude = ["tests/", "benches/"]
 
 [dev-dependencies]
 criterion = "0.5"
