--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "orbweaver"
-version = "0.15.0"
+version = "0.16.0"
 edition = "2021"
 authors = ["ixpantia <hola@ixpantia.com>", "Andrés F. Quintero <andres@ixpantia.com>"]
 description = "Crate designed for effortless construction and analysis of graph data structures."
@@ -11,6 +11,7 @@ exclude = ["assets/"]
 
 [dev-dependencies]
 criterion = "0.5"
+serde_json = "1.0.132"
 ureq = "2.9.7"
 
 [dependencies]
